# parquet4seastar

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/parquet2cql/: CMakeLists.txt  main.cc
benchmark/: .gitignore  benchmark.sh  benchmark_readers.sh  benchmark_writers.sh  generate_test_files.sh  run_with_flamechart.sh  setup.sh
benchmark/arrow-parquet-tools/: CMakeLists.txt
benchmark/arrow-parquet-tools/reader/: main.cc  program_options.cc  program_options.h
benchmark/arrow-parquet-tools/writer/: main.cc  program_options.cc  program_options.h
benchmark/seastar-parquet-tools/: CMakeLists.txt
benchmark/seastar-parquet-tools/reader/: main.cc
benchmark/seastar-parquet-tools/writer/: main.cc
cmake/: FindThrift.cmake  parquet4seastarConfig.cmake.in
doc/parquet/: NOTICE
examples/: CMakeLists.txt  example.cc
include/parquet4seastar/: bit_stream_utils.hh  bpacking.hh  bytes.hh  column_chunk_reader.hh  column_chunk_writer.hh  compression.hh  cql_reader.hh  dbp_decoding.hh  dbp_encoding.hh  encoding.hh  exception.hh  file_reader.hh  file_writer.hh  logical_type.hh  overloaded.hh  parquet_types.h  reader_schema.hh  record_reader.hh  rle_encoding.hh  thrift_serdes.hh  writer_schema.hh  y_combinator.hh
src/: column_chunk_reader.cc  compression.cc  cql_reader.cc  encoding.cc  file_reader.cc  logical_type.cc  parquet_types.cpp  reader_schema.cc  record_reader.cc  thrift_serdes.cc  writer_schema.cc
tests/: CMakeLists.txt  byte_stream_split_test.cc  column_chunk_writer_test.cc  compression_test.cc  cql_reader_alltypes_test.cc  cql_reader_test.cc  dbp_encoding_test.cc  delta_binary_packed_test.cc  delta_byte_array_test.cc  delta_length_byte_array_test.cc  dictionary_encoder_test.cc  file_writer_test.cc  rle_encoding_test.cc  thrift_serdes_test.cc
tests/test_data/alltypes/: basic.gzip.dict.parquet  basic.gzip.plain.parquet  basic.snappy.dict.parquet  basic.snappy.plain.parquet  basic.uncompressed.dict.parquet  basic.uncompressed.plain.parquet  collections.gzip.dict.parquet  collections.gzip.plain.parquet  collections.snappy.dict.parquet  collections.snappy.plain.parquet  collections.uncompressed.dict.parquet  collections.uncompressed.plain.parquet  decimal.gzip.dict.parquet  decimal.gzip.plain.parquet  decimal.snappy.dict.parquet  decimal.snappy.plain.parquet  decimal.uncompressed.dict.parquet  decimal.uncompressed.plain.parquet  generated_alltypes.gzip.parquet  generated_alltypes.snappy.parquet  generated_alltypes.uncompressed.parquet  other.gzip.dict.parquet  other.gzip.plain.parquet  other.snappy.dict.parquet  other.snappy.plain.parquet  other.uncompressed.dict.parquet  other.uncompressed.plain.parquet  time.gzip.dict.parquet  time.gzip.plain.parquet  time.snappy.dict.parquet  time.snappy.plain.parquet  time.uncompressed.dict.parquet  time.uncompressed.plain.parquet  timestamp.gzip.dict.parquet  timestamp.gzip.plain.parquet  timestamp.snappy.dict.parquet  timestamp.snappy.plain.parquet  timestamp.uncompressed.dict.parquet  timestamp.uncompressed.plain.parquet
